fixing overflow problems

--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -262,6 +262,9 @@ body {
   padding: 0 4px;
   overflow: hidden;
 }
+.select2-selection .select2-selection--multiple .select2-selection--clearable{
+  overflow: hidden;
+}
 .close-modal {
   position: absolute;
   top: 10px;
